Fix webDashboard/storage settings being dropped by config split
Reported by a user: after running /neoe config split, dashboard settings
reverted to defaults and couldn't be found in any config file. Root cause:
both "webDashboard" and "storage" were never registered in ConfigSplitter's
section list at all, so migrateToSplitConfigs() never wrote either section
to any split file - they were silently discarded on split, and every
getter for them fell back to hard-coded defaults forever after. "storage"
had the same bug (missing entirely from FILE_SECTIONS_MAP), meaning a
split could silently revert someone's configured SQLite/MySQL backend
choice back to "json".

webDashboard now gets its own dedicated dashboard.json; storage now lives
in main.json. Existing split installs get both auto-created/repaired on
next startup by the existing missing-file/missing-section repair logic,
though only with default values since neither ever existed in a split
file to recover real values from - original values are still recoverable
from config.json.backup (created automatically by every config split).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Sc9EitwigUmGjKwYtGhMVd